# getti

./: CMakeLists.txt  GetServer.h  README.md
src/: Client.h  GetServer.cpp  GetServer.h  TcpServer.cpp  TcpServer.h  common.h  main.cpp
